--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
-    "material-design-icons": "^3.0.1"
+    "material-design-icons": "^3.0.1",
+    "simplebar": "^5.0.6"
   },
   "devDependencies": {
     "aurelia-cli": "^1.0.2",
