--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@material/button": "^4.0.0",
+    "@material/floating-label": "^4.0.0",
+    "@material/textfield": "^4.0.0",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
     "material-design-icons": "^3.0.1",
