--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@material/textfield": "^4.0.0",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
+    "aurelia-fetch-client": "^1.8.2",
     "material-design-icons": "^3.0.1",
-    "simplebar": "^5.0.6"
+    "simplebar": "^5.0.6",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "aurelia-cli": "^1.0.2",
