--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material/button": "^4.0.0",
     "@material/fab": "^4.0.0",
     "@material/floating-label": "^4.0.0",
+    "@material/icon-button": "^4.0.0",
     "@material/textfield": "^4.0.0",
     "aurelia-animator-css": "^1.0.4",
     "aurelia-bootstrapper": "^2.3.2",
